app/assets/stylesheets/main.less
// FIXME upgrade to Play 2.1 to fix https://github.com/playframework/Play20/pull/366
// and let us just run this:
//@import 'vendor/bootstrap/less/bootstrap.less';
//@import 'vendor/bootstrap/less/responsive.less';
// Instead of all this:
@import "vendor/bootstrap/less/reset.less";
@import "vendor/bootstrap/less/variables.less"; // Modify this for custom colors, font-sizes, etc
@import "vendor/bootstrap/less/mixins.less";
@import "vendor/bootstrap/less/scaffolding.less";
@import "vendor/bootstrap/less/grid.less";
@import "vendor/bootstrap/less/layouts.less";
@import "vendor/bootstrap/less/type.less";
@import "vendor/bootstrap/less/code.less";
@import "vendor/bootstrap/less/forms.less";
@import "vendor/bootstrap/less/tables.less";
@import "vendor/bootstrap/less/sprites.less";
@import "vendor/bootstrap/less/dropdowns.less";
@import "vendor/bootstrap/less/wells.less";
@import "vendor/bootstrap/less/component-animations.less";
@import "vendor/bootstrap/less/close.less";
@import "vendor/bootstrap/less/buttons.less";
@import "vendor/bootstrap/less/button-groups.less";
@import "vendor/bootstrap/less/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
@import "vendor/bootstrap/less/navs.less";
@import "vendor/bootstrap/less/navbar.less";
@import "vendor/bootstrap/less/breadcrumbs.less";
@import "vendor/bootstrap/less/pagination.less";
@import "vendor/bootstrap/less/pager.less";
@import "vendor/bootstrap/less/modals.less";
@import "vendor/bootstrap/less/tooltip.less";
@import "vendor/bootstrap/less/popovers.less";
@import "vendor/bootstrap/less/thumbnails.less";
@import "vendor/bootstrap/less/media.less";
@import "vendor/bootstrap/less/labels-badges.less";
@import "vendor/bootstrap/less/progress-bars.less";
@import "vendor/bootstrap/less/accordion.less";
@import "vendor/bootstrap/less/carousel.less";
@import "vendor/bootstrap/less/hero-unit.less";
@import "vendor/bootstrap/less/utilities.less"; // Has to be last to override when necessary
@import "vendor/bootstrap/less/responsive-utilities.less";
@import "vendor/bootstrap/less/responsive-1200px-min.less";
@import "vendor/bootstrap/less/responsive-768px-979px.less";
@import "vendor/bootstrap/less/responsive-767px-max.less";
@import "vendor/bootstrap/less/responsive-navbar.less";

// Okay, on with the code

@import 'bootstrap-fixes.less';

@import 'vendor/progress-polyfill.less';
@import 'vendor/spectrum.less';

html {
  height: 100%;
}

.alert {
  position: relative;
  z-index: 1;
}

body.document-set-show {
  @left_width: 50%;
  @right_width: 50%;
  @tree_height: 55%;
  @focus_height: 15px;

  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;

  #document {
    position: absolute;
    right: 5px;
    left: @left_width;
    margin-left: 5px;
    top: 42px + 5px; // navbar
    bottom: 5px;
    border: 1px solid #ccc;

    iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      border: none;
      padding: 0;
      margin: 0;
    }
  }

  #main {
    position: absolute;
    left: 0;
    width: @left_width;
    top: 42px; // navbar
    bottom: 0;
    box-sizing: border-box;
  }

  #tree {
    height: @tree_height;
    padding-bottom: 10px;
    box-sizing: border-box;
    margin: 5px 5px 0;
    padding: 5px;
    border: 1px solid #ccc;
    border-bottom: none;
  }

  #focus {
    position: relative;
    height: @focus_height + 2px;
    margin: 0 5px;
    border: 1px solid #ccc; // including border-top

    .line {
      top: 0;
      height: @focus_height;
      background: @wellBackground;
    }

    .handle {
      top: 0;
      height: @focus_height;
      background: #ddd;
      border: 1px solid @grayLight;

      &.right {
        cursor: e-resize;
        border-left: none;
      }
      &.left {
        cursor: w-resize;
        border-right: none;
      }
    }

    .middle {
      top: 0;
      height: @focus_height;
      cursor: move;
      background: #ddd;
      border: 1px solid @grayLight;
      border-left: none;
      border-right: none;
    }
  }

  #tag-list {
    max-height: 15%;
    overflow: auto;
    margin-top: 5px;
    margin-right: 5px;
    margin-left: 1px;

    ul {
      margin: 0 5px 5px 0;
      padding: 0;
      list-style: none;
    }

    li {
      vertical-align: middle;
    }

    form {
      margin-bottom: 0;
    }

    .tag-name {
      .border-radius(@inputBorderRadius);

      #gradient > .vertical(fade(white, 70%), fade(white, 0%));
      background-color: transparent;

      min-width: 60px;
      max-width: 30em;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      text-align: left;
    }

    .btn-group {
      .border-radius(@inputBorderRadius);
      margin-left: 5px;
      margin-top: 5px;

      .btn {
        padding: 4px 10px; // same padding as other elements on this page
      }

      & > .btn { z-index: 2; } // fixes :hover disappearing when z-index changes

      &.selected {
        .tag-name {
          outline: 2px solid black;
        }

        .btn {
          .border-radius(0);
        }
      }

      &.shown .tag-name {
        color: black;
      }

      .tag-edit, .tag-add, .tag-remove {
        position: absolute;
        background-color: whiteSmoke;
        border-color: transparent;
        padding: 3px;
        width: 12px;
        top: 2px;
        right: 2px;
        overflow: hidden;
        text-align: center;
        border: none;
        opacity: 0.01;
        .transition(opacity 0.3s ease);
      }

      .tag-edit {
        right: 40px;
      }

      .tag-add {
        right: 21px;
      }

      .tag-remove {
        .border-right-radius(3px);
      }

      &:hover {
        .tag-edit, .tag-add, .tag-remove {
          opacity: 1;
        }
      }
    }
  }

  #document-list {
    box-sizing: border-box;
    margin: 5px;
    padding: 0;
    border: 1px solid #ccc;
    position: relative;

    h4 {
      margin: 0;
      padding: 0 10px;
      height: 1.8em;
      line-height: 1.8;
      white-space: nowrap;
      font-weight: normal;
      font-size: 1em;
      border-bottom: 1px solid #ccc;
      background: @wellBackground;
      overflow: hidden;
      text-overflow: ellipsis;

      a {
        display: none;
        float: right;
        color: @linkColor;
        height: 1.8em;
        line-height: 1.8em;
      }
    }

    h4:hover a {
      display: block;
      position: relative; // otherwise users can't click, in Chrome 22
      background: @wellBackground; // IE9 won't detect the change in the h4 text's width, but we can at least hide the text. Issue #193.
    }

    ul {
      overflow: auto;
      position: absolute;
      top: 1.8em;
      bottom: 0;
      left: 0;
      right: 0;
      margin: 1px 0 0; // from border-bottom on .num-documents
      padding: 5px 0;
      list-style: none;
    }

    li {
      margin: 0;
      padding: 0;
      white-space: nowrap;
      line-height: 1.5;

      &.placeholder {
        color: @gray;
      }
    }

    a {
      display: block;
      padding: 0 10px;
      color: inherit;
      text-decoration: inherit;
      overflow: hidden;
      text-overflow: ellipsis;

      &:hover {
        background: @wellBackground;
      }

      &.selected {
        color: @black;
        font-weight: bold;
      }
    }

    &.all-selected a {
      color: @black;
      font-weight: bold;
    }

    span.tags {
      span {
        display: inline-block;
        width: 10px;
        height: 10px;
        margin: 0 5px 0 0;
        border: 1px solid @gray;
      }
    }
  }
}

body.document-set-index {
  ul.document-sets {
    &>li {
      .well;

      &:not(:hover) {
        border-color: white;
        background-color: white;
        position: relative;
        -webkit-box-shadow: none;
           -moz-box-shadow: none;
                box-shadow: none;
      }
    }

    p.status {
      /* See #199. IE9 has a rendering bug in p.status, and really-dumb float:left is a workaround. */
      label {
        display: block;
        float: left;
        margin: 0 10px 0 0;
      }

      span.state-description {
        display: block;
        float: left;
      }

      .clearfix()
    }

    h3 {
      .muted;
      font-size: 1em;
      font-weight: normal;
      line-height: 1;
    }

    .state-description {
      .muted;
    }

    form.delete {
      margin-top: 10px;
      float: right;
      line-height: 40px; // from "h2"
      vertical-align: middle;
    }
  }

  #documentcloud-import {
    li {
      vertical-align: middle;

      h3, form, p {
        display: inline-block;
        line-height: 40px; // bootstrap's h3
        height: 40px;
        margin: 0;
        vertical-align: baseline;
      }

      h3 {
        font-size: 20px;
        margin: 0 .5em;
      }

      form {
        vertical-align: top;
      }

      span.document-count {
        color: @grayLight;
      }
    }

    .sample ul, .upload form {
      display: none; // until toggled
    }

    .manual form {
      margin-bottom: 0;
    }
  }

  #error-list-modal {
    h2 {
      font-size: 20px;
    }
  }
}

.welcome-show {
  header {
    margin-top: 10px;
    #gradient > .vertical-three-colors(white, #eee, 40%, #eee);
  }

  img {
    display: block;
    margin: 0 auto;
  }

  h1 {
    margin: 1em 0
  }

  div.row {
    margin-top: 2em;
  }
}

body.admin-user-index {
  td.actions form {
    display: inline;
  }

  td.actions input {
    display: inline;
    border: none;
    margin: 0;
    padding: 0;
    background: inherit;
    color: @linkColor;

    &:hover {
      color: @linkColorHover;
      text-decoration: underline;
    }
  }
}

#tag-form-view-dialog form.delete {
  float: left;
  margin: 0;
}

#node-form-view-dialog input[name=description] {
  box-sizing: border-box;
  height: 30px; // goes with box-sizing
  width: 100%;
}

#mousemove-handler {
  // When an iframe is on the page, it covers up mousemove and mouseup events.
  // So we add a "#mousemove-handler" on top of the entire page, just in case,
  // while dragging.
  //
  // Note: this disables "click" events, because the #mousemove-handler eats
  // the mouseup event.
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: transparent;
}

form.well.form-horizontal {
  h3:first-child {
    margin-top: 0;
  }

  fieldset.form-actions:last-child {
    padding-bottom: 0;
  }
}

.help-block.forgot-password {
  .muted; // override .help-inline
  float: right;
}

form.document-set-upload {
  width: 80%;
  margin-left: -40%;
  margin-top: -325px;

  .modal-body {
    max-height: 550px; // TODO make it expand with the window
  }

  input[type=file] {
    line-height: inherit;
    height: auto;
  }

  select {
    margin-bottom: 0;
  }

  .preview {
    .error {
      color: @red;
      font-weight: bold;
    }

    pre {
      font-size: .8em;
      overflow: auto;

      ol {
        margin-left: 4em;
        background: white;
      }

      li:hover {
        background: @tableBackgroundHover;
      }
    }

    table {
      .table;
      .table-condensed;
      .table-bordered;
      font-family: monospace;
      white-space: pre;

      table-layout: fixed;
      width: 100%;

      th, td {
        font-size: .8em;
        overflow: hidden;
      }

      div {
        max-height: 10em;
        width: auto;
        overflow: auto;
      }
    }
  }

  progress {
    box-sizing: border-box;
    display: none;
    margin-left: 5px;
    width: 200px;
  }
  span.status {
    display: none;
  }

  .requirements li {
    list-style-position: inside;
    list-style-type: disc;

    &.ok {
      list-style-type: none;
      color: @green;

      &:before {
        content: "✔";
      }
    }

    &.bad {
      list-style-type: none;
      color: @red;
      font-weight: bold;

      &:before {
        content: "✘";
      }
    }
  }
}

